fix(clayui.com): Adds overflow hidden on body when mobile nav is open
issue #2805

--- a/clayui.com/src/styles/site/_site.scss
+++ b/clayui.com/src/styles/site/_site.scss
@@ -19,6 +19,12 @@ body {
 
 // temporal hide
 
+.clay-overflow-hidden-md-down {
+	@media (max-width: $screen-md - 1) {
+		overflow: hidden;
+	}
+}
+
 .style-toggler {
 	display: none;
 }
